--- a/index.html
+++ b/index.html
@@ -20,15 +20,20 @@
     </nav>
 
     <header>
-        <h1>Your Project Title</h1>
-        <p>Your Name | WRIT 20833 | Fall 2025</p>
+        <h1>Saltburn Analysis</h1>
+        <p>Gianna Gatson, Bianca Medina, Isabella Nastas | WRIT 20833 | Fall 2025</p>
     </header>
 
     <main>
         <section id="question">
-            <h2>Research Question</h2>
+            <h2>Research Questions</h2>
             <!-- TODO: Add your research question here -->
-            <p>What patterns emerge when we analyze [your cultural phenomenon] using computational text analysis methods?</p>
+            <p>RQ1: How do people talk about the confusing or unclear morals in Saltburn?
+
+                RQ2: Why do viewers seem to like the movie’s weird or intense style instead of a clear ending?
+
+                RQ3: What do these reactions say about what people want from movies today? 
+</p>
 
             <p><strong>Background:</strong> Explain why this question matters and what motivated your research.</p>
         </section>
@@ -38,17 +43,17 @@
 
             <h3>Dataset</h3>
             <!-- TODO: Describe your data collection and methodology -->
-            <p><strong>Data Source:</strong> [Where did you collect your data?]</p>
-            <p><strong>Collection Method:</strong> [How did you gather the data? Instant Data Scraper? API? Manual collection?]</p>
-            <p><strong>Dataset Size:</strong> [Number of items, date range, etc.]</p>
-            <p><strong>Ethical Considerations:</strong> [How did you protect privacy? What ethical decisions did you make?]</p>
+            <p><strong>Data Source:</strong> Our data source came from audience reviews of Saltburn on Rotten Tomatoes and YouTube</p>
+            <p><strong>Collection Method:</strong>  We used instant data scraper to collect our data. </p>
+            <p><strong>Dataset Size:</strong> Saltburn has 281 entries in its CSV file, while the YouTube comments CSV contains 109 entries.</p>
+            <p><strong>Ethical Considerations:</strong> We ethically sourced our information by relying only on publicly availible data and verifying each source for transparency and credibility.</p>
 
             <h3>Analysis Methods</h3>
-            <p><strong>Tools:</strong> Python (pandas, VADER, Gensim)</p>
+            <p><strong>Tools:</strong> Python</p>
             <ul>
                 <li><strong>Term Frequency Analysis:</strong> [Brief description of how you used this method]</li>
                 <li><strong>Sentiment Analysis (VADER):</strong> [What sentiment patterns did you look for?]</li>
-                <li><strong>Topic Modeling (Gensim LDA):</strong> [How many topics? What did you discover?]</li>
+                <li><strong>Topic Modeling (Gensim LDA):</strong> Across both the Youtube comments and Rotten Tomatoes reviews and seven topics, the topics revealed a shared fascination with Saltuburn's characters, psychological themes, and bold stylistic choices. Viewers frequently debated Oliver's motives, his relationships with Felix and Farleigh, and whether his actions stemmed from genuine emotion or calculated manipulation. Many topics focused on psychopathy, sociopathy, and personality disorders, comparing the film to other works like The Talented Mr. Ripley. At the same time, reviewers on Rotten Tomatoes emphasized the film's shocking and disturbing scenes, its dramatic twists, and the tone that left some impressed and others unsettled. Both platforms highlighted Barry Keoghan's preformace and the strength of the supporting cast. The commentary portrays Saltburn as visually striking, emotional divisive, and intense. </li>
             </ul>
         </section>
 
