--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <section id="question">
             <h2>Research Questions</h2>
             <!-- TODO: Add your research question here -->
-            <p>RQ1: How do people talk about the confusing or unclear morals in Saltburn?
+            <p>RQ1: How do people talk about the confusing or unclear morals in Saltburn? <br>
 
-                RQ2: Why do viewers seem to like the movie’s weird or intense style instead of a clear ending?
+                RQ2: Why do viewers seem to like the movie’s weird or intense style instead of a clear ending? <br>
 
-                RQ3: What do these reactions say about what people want from movies today? 
+                RQ3: What do these reactions say about what people want from movies today? <br>
 </p>
 
             <p><strong>Background:</strong> Explain why this question matters and what motivated your research.</p>
@@ -51,7 +51,7 @@
             <h3>Analysis Methods</h3>
             <p><strong>Tools:</strong> Python</p>
             <ul>
-                <li><strong>Term Frequency Analysis:</strong> [Brief description of how you used this method]</li>
+                <li><strong>Term Frequency Analysis:</strong> We used term frequency analysis to identify the most common words appearing in audience reviews of Saltburn from Rotten Tomatoes and YouTube comments. By calculating how often specific words occurred across both datasets, we were able to see which ideas, characters, and themes audiences discussed most frequently. This method helped reveal patterns in how viewers described the movie and provided evidence to support our interpretations about audience engagement and cultural attitudes toward morally complex storytelling. </li>
                 <li><strong>Sentiment Analysis (VADER):</strong> [What sentiment patterns did you look for?]</li>
                 <li><strong>Topic Modeling (Gensim LDA):</strong> Across both the Youtube comments and Rotten Tomatoes reviews and seven topics, the topics revealed a shared fascination with Saltuburn's characters, psychological themes, and bold stylistic choices. Viewers frequently debated Oliver's motives, his relationships with Felix and Farleigh, and whether his actions stemmed from genuine emotion or calculated manipulation. Many topics focused on psychopathy, sociopathy, and personality disorders, comparing the film to other works like The Talented Mr. Ripley. At the same time, reviewers on Rotten Tomatoes emphasized the film's shocking and disturbing scenes, its dramatic twists, and the tone that left some impressed and others unsettled. Both platforms highlighted Barry Keoghan's preformace and the strength of the supporting cast. The commentary portrays Saltburn as visually striking, emotional divisive, and intense. </li>
             </ul>
