--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <h3>Dataset</h3>
             <!-- TODO: Describe your data collection and methodology -->
-            <p><strong>Data Source:</strong> Our data source came from audience reviews of Saltburn on Rotten Tomatoes and YouTube</p>
+            <p><strong>Data Source:</strong> Our data source came from audience reviews of Saltburn on Rotten Tomatoes and YouTube.</p>
             <p><strong>Collection Method:</strong>  We used instant data scraper to collect our data. </p>
             <p><strong>Dataset Size:</strong> Saltburn has 281 entries in its CSV file, while the YouTube comments CSV contains 109 entries.</p>
             <p><strong>Ethical Considerations:</strong> We ethically sourced our information by relying only on publicly availible data and verifying each source for transparency and credibility.</p>
