--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 RQ3: What do these reactions say about what people want from movies today? <br>
 </p>
 
-            <p><strong>Background:</strong> Explain why this question matters and what motivated your research.</p>
+            <p><strong>Background:</strong> These questions matter because Saltburn sparked strong debates over its confusing morals and unusual style, showing how people respond to movies that don’t offer clear answers. Our research was motivated by wanting to understand why many viewers today enjoy intense, ambiguous films more than straightforward stories with neat endings.</p>
         </section>
 
         <section id="data">
@@ -117,7 +117,8 @@ df['sentiment'] = df['compound'].apply(
             <p>The computational analysis revealed three major insights:</p>
 
             <ol>
-                <li><strong>Finding 1:</strong> [Describe your first key discovery]</li>
+                <li><strong>Finding 1:</strong> People talk about the confusing morals in Saltburn as a key part of the movie’s appeal. They enjoy the strange, intense, and visually striking style even without a clear ending. And these reactions suggest that modern audiences are interested in stories that are morally complex, emotionally engaging, and intellectually stimulating, even if they don’t offer neat resolutions or traditional happy endings.
+</li>
                 <li><strong>Finding 2:</strong> [Describe your second key discovery]</li>
                 <li><strong>Finding 3:</strong> [Describe your third key discovery]</li>
             </ol>
@@ -184,7 +185,8 @@ df['sentiment'] = df['compound'].apply(
 
             <h3>Limitations & Future Directions</h3>
             <p><strong>What I would do differently:</strong> [Reflect on your process]</p>
-            <p><strong>Questions that remain:</strong> [What would you investigate with more time?]</p>
+            <p><strong>Questions that remain:</strong> Critics vs. Audience Split: In this process we analyzed just the audience reviews, looking at critics reviews would've given us a deeper look into the difference between professional and audience reviews.
+            Comparing films: contrast Saltburn with 2–3 similar ambiguous films to spot common patterns in reception. </p>
             <p><strong>Confidence in conclusions:</strong> [How certain are you about your findings? What caveats should readers consider?]</p>
         </section>
     </main>
