--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 RQ3: What do these reactions say about what people want from movies today? <br>
 </p>
 
-            <p><strong>Background:</strong> Explain why this question matters and what motivated your research.</p>
+            <p><strong>Background:</strong> These research questions matter because they investigate how emotional responses shape the way audiences interpret morally ambiguous films like Saltburn. By analyzing sentiment in viewer comments, the study looks beyond what people talk about to how they feel when engaging with the film’s unclear moral messaging. </p>
         </section>
 
         <section id="data">
