--- a/index.html
+++ b/index.html
@@ -107,6 +107,23 @@ df['sentiment'] = df['compound'].apply(
                          alt="Word cloud showing most frequent terms">
                     <figcaption>Figure 3: Most common terms in the corpus</figcaption>
                 </figure>
+
+                <h3>Term Frequency Results</h3>
+            <p>The term frequency analysis shows that Rotten Tomatoes reviewers focused on narrative elements, using words like movie, character, plot, and twist, indicating strong engagement with Saltburn’s complexity and shocking moments. YouTube commenters, however, centered on characters and morality, with frequent terms like he, his, Oliver, and Felix, suggesting deeper discussion about motivations and ethical ambiguity. Overall, the results support the idea that audiences today are drawn to morally complex, psychologically intense films that encourage interpretation rather than offering clear answers.</p>
+
+            <!-- Multiple visualizations in a grid -->
+            <div class="viz-grid">
+                <figure class="viz-container">
+                    <img src="images/Term_RT.png"
+                         alt="Visualization of topic clusters from LDA analysis">
+                    <figcaption>Figure 2: Term Frequency Graph from Rotten Tomatoes Review</figcaption>
+                </figure>
+
+                <figure class="viz-container">
+                    <img src="images/Term_YT.png"
+                         alt="Word cloud showing most frequent terms">
+                    <figcaption>Figure 3: Term Frequency Graph from YouTube Comments</figcaption>
+                </figure>
             </div>
         </section>
 
