--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@ df['sentiment'] = df['compound'].apply(
 )</code></pre>
 
             <h3>Topic Modeling Results</h3>
-            <p>Using Gensim's LDA implementation, I identified [number] major topics...</p>
+            <p>Using Gensim's LDA I identified seven major discussion topics based on the most frequently used words. From these, I highlighted Topic 6 from Rotten Tomatoes and Topic 5 from YouTube comments as the most representative for closer analysis. Words like psychopath and sociopath point to audience attention on mental states and ethical complexity. Words like Oliver, Ollie, Barry show that audience discussions are heavily centered on specific characters.
+
+ </p>
 
             <!-- Multiple visualizations in a grid -->
             <div class="viz-grid">
