--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ df['sentiment'] = df['compound'].apply(
 )</code></pre>
 
             <h3>Topic Modeling Results</h3>
-            <p>Using Gensim's LDA I identified seven major discussion topics based on the most frequently used words. From these, I highlighted Topic 6 from Rotten Tomatoes and Topic 5 from YouTube comments as the most representative for closer analysis. Words like psychopath and sociopath point to audience attention on mental states and ethical complexity. Words like Oliver, Ollie, Barry show that audience discussions are heavily centered on specific characters.
+            <p>Using Gensim’s LDA, seven major discussion topics were identified based on frequently used words. From these, Topic 6 from Rotten Tomatoes and Topic 5 from YouTube comments were selected as the most representative for deeper analysis. Terms such as psychopath and sociopath highlight audience focus on mental states and ethical complexity, while names like Oliver, Ollie, and Barry indicate that discussions are strongly centered on specific characters. Overall, these topics reflect strong audience concern with characterization, emotional reactions, and moral ambiguity.
 
  </p>
 
