--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@ df['sentiment'] = df['compound'].apply(
             </div>
 
             <h3>Limitations & Future Directions</h3>
-            <p><strong>What I would do differently:</strong> [Reflect on your process]</p>
-            <p><strong>Questions that remain:</strong> [What would you investigate with more time?]</p>
+            <p><strong>What I would do differently:</strong> We focused only on non-critic audience comments, but incorporating professional critics’ reviews would provide a valuable additional dataset for comparison. We also limited our analysis to two platforms; expanding to more sites could have offered a broader view of audience reactions, though the time required would have made that difficult within a single semester. </p>
+            <p><strong>Questions that remain:</strong> With more time, we could investigate how professional critics’ reviews compare to audience sentiment, examine differences across multiple platforms to see how community norms shape reactions, and track how opinions change over time after the film’s release. </p>
             <p><strong>Confidence in conclusions:</strong> [How certain are you about your findings? What caveats should readers consider?]</p>
         </section>
     </main>
