--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <nav>
         <ul>
+            <li><a href="#intro">Introduction</a></li>
             <li><a href="#question">Research Question</a></li>
             <li><a href="#data">Data & Methods</a></li>
             <li><a href="#analysis">Results & Analysis</a></li>
@@ -25,6 +26,14 @@
     </header>
 
     <main>
+
+                <section id="intro">
+            <h2>Introduction</h2>
+            <p>To investigate how audiences respond to Saltburn and test our hypothesis about why morally complex, psychologically intense films resonate today, we analyzed Rotten Tomatoes and YouTube comments using Python tools including topic modeling, sentiment analysis, and term frequency analysis. Topic modeling revealed major themes like shock, character psychology, and moral ambiguity. Sentiment analysis showed strong polarization and emotional engagement. Term frequency highlighted viewers’ focus on characters, unsettling scenes, and interpretation rather than simple opinions. Together, these methods helped us answer our research questions by showing that audiences are increasingly drawn to films that are morally unclear, visually intense, and thought-provoking.
+</p>
+
+        </section>
+
         <section id="question">
             <h2>Research Questions</h2>
             <!-- TODO: Add your research question here -->
