--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ df['sentiment'] = df['compound'].apply(
             <p>The computational analysis revealed three major insights:</p>
 
             <ol>
-                <li><strong>Finding 1:</strong> [Describe your first key discovery]</li>
+                <li><strong>Finding 1:</strong> Audience reactions show that viewers are drawn to Saltburn for its shocking visuals, morally complex characters, and psychological tension, engaging emotionally and intellectually with confusion and discomfort rather than wanting clear answers or a clear ending.</li>
                 <li><strong>Finding 2:</strong> [Describe your second key discovery]</li>
                 <li><strong>Finding 3:</strong> [Describe your third key discovery]</li>
             </ol>
