--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@ df['sentiment'] = df['compound'].apply(
             <p>Using Gensim’s LDA, seven major discussion topics were identified based on frequently used words. From these, Topic 6 from Rotten Tomatoes and Topic 5 from YouTube comments were selected as the most representative for deeper analysis. Terms such as psychopath and sociopath highlight audience focus on mental states and ethical complexity, while names like Oliver, Ollie, and Barry indicate that discussions are strongly centered on specific characters. Overall, these topics reflect strong audience concern with characterization, emotional reactions, and moral ambiguity.
 
  </p>
+ <img src="images/Rotten_T_TM.png" width="550">
+            <figcaption>Figure 1: Most frequently used topics Rotten Tomatoes</figcaption>
+
+<img src="images/Youtube_Comments TM.png" width="550">
+            <figcaption>Figure 2: Most frequently used topics on Youtube Comments </figcaption>
 
             <!-- Multiple visualizations in a grid -->
             <div class="viz-grid">
