--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ df['sentiment'] = df['compound'].apply(
         <p>📊 <strong>Project Materials:</strong>
             <a href="https://github.com/yourusername/project-name">View Google Colab Notebooks & Data on GitHub</a>
         </p>
-        <p>&copy; 2025 Gianna Gatson | WRIT 20833: Introduction to Coding in the Humanities</p>
+        <p>&copy; 2025 Gianna Gatson Bianca Medina Isabellla Nastas | WRIT 20833: Introduction to Coding in the Humanities</p>
     </footer>
 </body>
 </html>
