--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ df['sentiment'] = df['compound'].apply(
 
             <div class="framework-callout">
                 <h3>🤖 AI Agency</h3>
-                <p>The use of topic modeling and sentiment analysis demonstrates <strong>AI Agency</strong> concerns. While the algorithms appear to "discover" meaning, the interpretation and framing of results remains entirely human. [Explain further...]</p>
+                <p> The use of topic modeling and sentiment analysis in this project highlights key concerns related to AI Agency. Although the algorithms appear to “discover” themes and sentiments, they do not interpret meaning on their own. Our group of researchers selected the tools, cleaned the data, classified each data set, chose which topics were “most representative,” and interpreted what those topics meant in relation to culture and morality. AI identified word groupings and sentiment scores, but it was our human judgment that transformed these outputs into meaningful claims about audience psychology and film culture. While AI played a powerful role in our data analysis it doesn't generate understanding. Without our own analysis of the data the AI results could mislead or misconstrude our findings. Therefore, this project shows that AI can help us get to our results faster but the final interpretation of the anaylsis remains a humans responsiblity.</p>
             </div>
 
             <h3>Limitations & Future Directions</h3>
