--- a/index.html
+++ b/index.html
@@ -110,19 +110,7 @@ df['sentiment'] = df['compound'].apply(
 <img src="images/Youtube_Comments TM.png" width="550">
             <figcaption>Figure 2: Most frequently used topics on Youtube Comments </figcaption>
 
-            <!-- Multiple visualizations in a grid -->
-            <div class="viz-grid">
-                <figure class="viz-container">
-                    <img src="images/topic-model.png"
-                         alt="Visualization of topic clusters from LDA analysis">
-                    <figcaption>Figure 2: Topic clusters from LDA analysis</figcaption>
-                </figure>
-
-                <figure class="viz-container">
-                    <img src="images/word-cloud.png"
-                         alt="Word cloud showing most frequent terms">
-                    <figcaption>Figure 3: Most common terms in the corpus</figcaption>
-                </figure>
+            
 
                 <h3>Term Frequency Results</h3>
             <p>The term frequency analysis shows that Rotten Tomatoes reviewers focused on narrative elements, using words like movie, character, plot, and twist, indicating strong engagement with Saltburn’s complexity and shocking moments. YouTube commenters, however, centered on characters and morality, with frequent terms like he, his, Oliver, and Felix, suggesting deeper discussion about motivations and ethical ambiguity. Overall, the results support the idea that audiences today are drawn to morally complex, psychologically intense films that encourage interpretation rather than offering clear answers.</p>
@@ -190,7 +178,7 @@ df['sentiment'] = df['compound'].apply(
             </table>
 
             <h3>What Surprised Me</h3>
-            <p>I initially predicted that [your assumption], but the data revealed [what actually happened]. This challenged my understanding because...</p>
+            <p>We initially predicted that viewers would focus on Saltburn’s unclear morals and criticize the film for being confusing, but the data revealed something very different. Instead of frustration, people were drawn to the movie’s intensity, visuals, and overall weirdness. This challenged our understanding because it showed that audiences today value ambiguity and unsettling storytelling, rather than preferring basic plots or clear messages.</p>
         </section>
 
         <section id="reflection">
