--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ df['sentiment'] = df['compound'].apply(
 
             <div class="framework-callout">
                 <h3>📐 Classification Logic</h3>
-                <p>This project connects to <strong>Classification Logic</strong> by revealing how algorithmic categorization shapes our understanding of [your topic]. [Explain the connection...]</p>
+                <p>This project connects to <strong>Classification Logic</strong> This project connects to Classification Logic by showing how algorithmic grouping and labeling shape our understanding of audience reactions to morally complex films like Saltburn. Through sentiment analysis, comments were sorted into categories of positive, neutral, or negative, and topic modeling organized audience language into seven groups. These forms of classification revealed large patterns, such as strong emotional division and consistent focus on certain characters' psychology, but they also simplified how viewers actually expressed themselves. Many comments contained mixed or conflicted emotions, such as admiration for the film’s artistic style alongside discomfort with its gruesome content, yet these responses were placed into a single sentiment category. This shows how classification systems can make trends easier to study at scale while also limiting how fully individual emotional experiences are represented.</p>
 
                 <p><em>Critical question:</em> What nuances are lost when we reduce complex cultural expressions to computational categories?</p>
             </div>
