--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
     <main>
 
+        <img src="images/saltburn.png" alt="Saltburn" class="responsive-logo">
+
                 <section id="intro">
             <h2>Introduction</h2>
             <p>To investigate how audiences respond to Saltburn and test our hypothesis about why morally complex, psychologically intense films resonate today, we analyzed Rotten Tomatoes and YouTube comments using Python tools including topic modeling, sentiment analysis, and term frequency analysis. Topic modeling revealed major themes like shock, character psychology, and moral ambiguity. Sentiment analysis showed strong polarization and emotional engagement. Term frequency highlighted viewers’ focus on characters, unsettling scenes, and interpretation rather than simple opinions. Together, these methods helped us answer our research questions by showing that audiences are increasingly drawn to films that are morally unclear, visually intense, and thought-provoking.
@@ -212,7 +214,7 @@ print(f"Negative (<-0.1): {negative} ({negative/len(df)*100:.1f}%)")
 
             <h3>Limitations & Future Directions</h3>
             <p><strong>What I would do differently:</strong> We focused only on non-critic audience comments, but incorporating professional critics’ reviews would provide a valuable additional dataset for comparison. We also limited our analysis to two platforms; expanding to more sites could have offered a broader view of audience reactions, though the time required would have made that difficult within a single semester. </p>
-            <p><strong>Questions that remain:</strong> A question that still remains is how different demographics view the film. For instance do men view it differenly than woman, or people of different ages or backgrounds? Understanding these perspectives could deepen our analysis and reveal more about the film's cultural impact.</p>
+            <p><strong>Questions that remain:</strong> With more time, we could investigate how professional critics’ reviews compare to audience sentiment, examine differences across multiple platforms to see how community norms shape reactions, and track how opinions change over time after the film’s release. </p>
             <p><strong>Confidence in conclusions:</strong> We are confident in our findings because similar themes appeared across both platforms.The data produced clear and consistent patterns that matched close readings of the comments. However, the data represents only people who chose to post online, not all viewers. Because we studied only two platforms, the conclusions may not generalize to other communities. The findings reflect prominent discussions in these spaces rather than overall audience opinion.</p>
         </section>
     </main>
@@ -221,7 +223,7 @@ print(f"Negative (<-0.1): {negative} ({negative/len(df)*100:.1f}%)")
         <p>📊 <strong>Project Materials:</strong>
             <a href="https://github.com/yourusername/project-name">View Google Colab Notebooks & Data on GitHub</a>
         </p>
-        <p>&copy; 2025 Gianna Gatson, Bianca Medina, Isabella Nastas | WRIT 20833: Introduction to Coding in the Humanities</p>
+        <p>&copy; 2025 Gianna Gatson Bianca Medina Isabellla Nastas | WRIT 20833: Introduction to Coding in the Humanities</p>
     </footer>
 </body>
 </html>
