--- a/index.html
+++ b/index.html
@@ -79,7 +79,13 @@
             <figure class="viz-container">
                 <img src="images/youtube-sentiment-distribution.png"
                      alt="Bar chart showing distribution of positive, negative, and neutral sentiment">
-                <figcaption>Figure 1: Distribution of sentiment scores across dataset</figcaption>
+                <figcaption>Figure 1: Distribution of sentiment scores across YouTube comments</figcaption>
+            </figure>
+
+            <figure class="viz-container">
+                <img src="images/rottentomatoes-sentiment.png"
+                     alt="Bar chart showing distribution of positive, negative, and neutral sentiment">
+                <figcaption>Figure 2: Distribution of sentiment scores across Rotten Tomatoes audience reviews</figcaption>
             </figure>
 
             <h3>Code Example</h3>
@@ -168,19 +174,19 @@ print(f"Negative (<-0.1): {negative} ({negative/len(df)*100:.1f}%)")
                         <td>Positive</td>
                         <td>205</td>
                         <td>48.65%</td>
-                        <td>0.XX</td>
+                        <td>0.58</td>
                     </tr>
                     <tr>
                         <td>Neutral</td>
                         <td>72</td>
                         <td>22.40%</td>
-                        <td>0.XX</td>
+                        <td>0.02</td>
                     </tr>
                     <tr>
                         <td>Negative</td>
                         <td>112</td>
                         <td>29.00%</td>
-                        <td>-0.XX</td>
+                        <td>-0.52</td>
                     </tr>
                 </tbody>
             </table>
