--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ print(f"Negative (<-0.1): {negative} ({negative/len(df)*100:.1f}%)")
 
             <h3>Limitations & Future Directions</h3>
             <p><strong>What I would do differently:</strong> We focused only on non-critic audience comments, but incorporating professional critics’ reviews would provide a valuable additional dataset for comparison. We also limited our analysis to two platforms; expanding to more sites could have offered a broader view of audience reactions, though the time required would have made that difficult within a single semester. </p>
-            <p><strong>Questions that remain:</strong> With more time, we could investigate how professional critics’ reviews compare to audience sentiment, examine differences across multiple platforms to see how community norms shape reactions, and track how opinions change over time after the film’s release. </p>
+            <p><strong>Questions that remain:</strong> A question that still remains is how different demographics react to the film. For instance, we would like to know if men and women, people from different cultural backgrounds, or various age groups respond differently to the film's themes and characters.</p>
             <p><strong>Confidence in conclusions:</strong> We are confident in our findings because similar themes appeared across both platforms.The data produced clear and consistent patterns that matched close readings of the comments. However, the data represents only people who chose to post online, not all viewers. Because we studied only two platforms, the conclusions may not generalize to other communities. The findings reflect prominent discussions in these spaces rather than overall audience opinion.</p>
         </section>
     </main>
