added ipynb ans csv files

--- a/index.html
+++ b/index.html
@@ -223,6 +223,21 @@ print(f"Negative (<-0.1): {negative} ({negative/len(df)*100:.1f}%)")
             <p><strong>Questions that remain:</strong> A question that still remains is how different demographics react to the film. For instance, we would like to know if men and women, people from different cultural backgrounds, or various age groups respond differently to the film's themes and characters.</p>
             <p><strong>Confidence in conclusions:</strong> We are confident in our findings because similar themes appeared across both platforms.The data produced clear and consistent patterns that matched close readings of the comments. However, the data represents only people who chose to post online, not all viewers. Because we studied only two platforms, the conclusions may not generalize to other communities. The findings reflect prominent discussions in these spaces rather than overall audience opinion.</p>
         </section>
+
+        <section id="notebook">
+            <h2>Notebook & Data Files</h2>
+            <p>
+                Access our analysis and data files below:
+            </p>
+            <ul>
+                <li><a href="notebooks/Saltburn_Rotten_Tomatoes_sentiment_analysis-2.ipynb" target="_blank">RT Sentiment Analysis Notebook (.ipynb)</a></li>
+                  <li><a href="notebooks/Saltburn_Youtube_sentiment_analysis-3.ipynb" target="_blank">YT Sentiment Analysis Notebook (.ipynb)</a></li>
+                    <li><a href="notebooks/Term_Frequency_Project1.ipynb" target="_blank">Term Frequency Notebook (.ipynb)</a></li>
+                      <li><a href="notebooks/Saltburn_Rotten_Tomatoes_sentiment_analysis-2.ipynb" target="_blank">Topic Modeling Notebook (.ipynb)</a></li>
+                <li><a href="data/combined_youtube_saltburn.csv" target="_blank"> Combined Dataset (.csv)</a></li>
+            </ul>
+            <!-- To add your files, place your notebook in the 'notebooks' folder and your CSV in the 'data' folder. Update the links above with your actual filenames. -->
+        </section>
     </main>
 
     <footer>
